unpackaged/objects/KOL_model__mdt.object
<CustomObject>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BR</fullName>
        </value>
        <value>
          <fullName>BY</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
          <default>true</default>
          <label>CA</label>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CL</fullName>
        </value>
        <value>
          <fullName>CN</fullName>
        </value>
        <value>
          <fullName>CO</fullName>
        </value>
        <value>
          <fullName>CZ</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>EG</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>GB</fullName>
        </value>
        <value>
          <fullName>HK</fullName>
        </value>
        <value>
          <fullName>HR</fullName>
        </value>
        <value>
          <fullName>HU</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IN</fullName>
        </value>
        <value>
          <fullName>IQ</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KR</fullName>
        </value>
        <value>
          <fullName>LB</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AED</fullName>
        </value>
        <value>
          <fullName>AUD</fullName>
        </value>
        <value>
          <fullName>BRL</fullName>
        </value>
        <value>
          <fullName>BYN</fullName>
        </value>
        <value>
          <fullName>CAD</fullName>
          <default>true</default>
          <label>CAD</label>
        </value>
        <value>
          <fullName>CHF</fullName>
        </value>
        <value>
          <fullName>CLP</fullName>
        </value>
        <value>
          <fullName>COP</fullName>
        </value>
        <value>
          <fullName>CZK</fullName>
        </value>
        <value>
          <fullName>DKK</fullName>
        </value>
        <value>
          <fullName>EGP</fullName>
        </value>
        <value>
          <fullName>EUR</fullName>
        </value>
        <value>
          <fullName>GBP</fullName>
        </value>
        <value>
          <fullName>HKD</fullName>
        </value>
        <value>
          <fullName>HRK</fullName>
        </value>
        <value>
          <fullName>HUF</fullName>
        </value>
        <value>
          <fullName>IDR</fullName>
        </value>
        <value>
          <fullName>ILS</fullName>
        </value>
        <value>
          <fullName>INR</fullName>
        </value>
        <value>
          <fullName>IQD</fullName>
        </value>
        <value>
          <fullName>JPN</fullName>
        </value>
        <value>
          <fullName>JPY</fullName>
        </value>
        <value>
          <fullName>KRW</fullName>
        </value>
        <value>
          <fullName>LBP</fullName>
        </value>
        <value>
          <fullName>MXN</fullName>
        </value>
        <value>
          <fullName>MYR</fullName>
        </value>
        <value>
          <fullName>NOK</fullName>
        </value>
        <value>
          <fullName>NZD</fullName>
        </value>
        <value>
          <fullName>PHP</fullName>
        </value>
        <value>
          <fullName>PLN</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ProfessionGroup__c</fullName>
    <label>Profession Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Specialty Group 1</fullName>
          <default>true</default>
          <label>Specialty Group 1</label>
        </value>
        <value>
          <fullName>Specialty Group 2</fullName>
        </value>
        <value>
          <fullName>Specialty Group 3</fullName>
        </value>
        <value>
          <fullName>Specialty Group 4</fullName>
        </value>
        <value>
          <fullName>Support Group 1</fullName>
        </value>
        <value>
          <fullName>Support Group 2</fullName>
        </value>
        <value>
          <fullName>Support Group 3</fullName>
        </value>
        <value>
          <fullName>Support Group 4</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Professor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently used for NL where we need to separate FMV rates between professors and "non-professors"</description>
    <label>Professor required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>TIER 1</fullName>
          <default>true</default>
          <label>TIER 1</label>
        </value>
        <value>
          <fullName>TIER 2</fullName>
        </value>
        <value>
          <fullName>TIER 3</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>KOL model</label>
  <pluralLabel>KOL models</pluralLabel>
</CustomObject>